--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <hr class="counter" />
         <div class="counter-container">
           <p>
-            <span>0</span>
+            <span id="todoCount">0</span>
             items total
           </p>
           <button id="deleteButton">Delete All</button>
